test/invalid-syntax/56269_bad_operator/bad_operator.agu
-- Author: 56269, Frederico Prazeres

-- Syntax Error: + can't be followed by another +

let badOperator (n) : Int -> Int =
  let a : Int[][] = new Int[] [n | new Int [n | 0]] ;
  let j : Int = length(a) + + 1 ;
  j